<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewWhoPidorActivityChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manifest_label_choice_activity"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <RadioGroup
        android:id="@+id/radioGroupActivityChoice"
        android:layout_width="127dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWhoPidorActivityChoice"
        app:layout_constraintVertical_bias="0.021">

        <RadioButton
            android:id="@+id/radioButtonDimaActivityChoice"
            android:layout_width="wrap_content"
            android:onClick="onClickActivityChoice"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_dima_activity_choice" />

        <RadioButton
            android:id="@+id/radioButtonAlinaActivityChoice"
            android:layout_width="wrap_content"
            android:onClick="onClickActivityChoice"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_alina_activity_choice" />


    </RadioGroup>

    <EditText
        android:id="@+id/editTextYourVariantActivityChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/text_view_your_variant_activity_choice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewYorVariantActivityChoice"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/textViewYorVariantActivityChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_your_variant_activity_choice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupActivityChoice"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/buttonAnswerActivityChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ButtonMakeChoice"
        android:text="@string/button_answer_activity_choice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClickActivityChoice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editTextYourVariantActivityChoice"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

</androidx.constraintlayout.widget.ConstraintLayout>