<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/icon_real"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewWhoLoh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_who_loh_activity_main"
        android:background="#0BCA0F"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/icon_real"
        app:layout_constraintBottom_toTopOf="@+id/textViewWhoLoh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMakeChoiceMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickActivityMain"
        android:theme="@style/ButtonMakeChoice"
        android:text="@string/button_make_choice_activity_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWhoLoh"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/buttonDatPoEbaluMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        android:onClick="onClickActivityMain"
        android:text="@string/button_dat_po_ebalu_activity_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMakeChoiceMainActivity"
        app:layout_constraintVertical_bias="0.843" />

</androidx.constraintlayout.widget.ConstraintLayout>